fixed bug in nrosy wrapper
Former-commit-id: 5e6fbb4acbabb717e0a808ce2ce307f30f6491fc

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -26,8 +26,8 @@ find_package(OPENGL REQUIRED)
 # SET(PYTHON_INCLUDE_DIR "D:/Python34/include")
 
 # Force a specific python version
-# SET(PYTHON_LIBRARIES "/usr/local/Cellar/python3/3.5.0/Frameworks/Python.framework/Versions/3.5/lib/libpython3.5m.dylib")
-# SET(PYTHON_INCLUDE_DIR "/usr/local/Cellar/python3/3.5.0/Frameworks/Python.framework/Versions/3.5/include/python3.5m")
+SET(PYTHON_LIBRARIES "/usr/local/Cellar/python3/3.5.0/Frameworks/Python.framework/Versions/3.5/lib/libpython3.5m.dylib")
+SET(PYTHON_INCLUDE_DIR "/usr/local/Cellar/python3/3.5.0/Frameworks/Python.framework/Versions/3.5/include/python3.5m")
 
 set(Python_ADDITIONAL_VERSIONS 3.4.3 3.5 3.6)
 find_package(PythonLibs REQUIRED)
@@ -78,6 +78,30 @@ include_directories("../external/nanogui/ext/glfw/include")
 include_directories("../external/nanogui/ext/nanovg/src")
 list(APPEND SHARED_LIBRARIES "nanogui" "glfw" ${OPENGL_LIBRARIES})
 
+# include comiso if available
+
+find_package(LIBCOMISOH QUIET)
+#Compile CoMISo (if found)
+# NOTE: this cmakefile works only with the
+# comiso available here: https://github.com/libigl/CoMISo
+IF(LIBCOMISO_FOUND)
+
+  add_definitions(-DPY_COMISO)
+
+  include_directories("../../CoMISo/ext/gmm-4.2/include")
+  include_directories("../../")
+  add_subdirectory("../../CoMISo/" "CoMISo")
+
+  list(APPEND SHARED_SOURCES "py_igl_comiso.cpp")
+
+  if(APPLE)
+    find_library(accelerate_library Accelerate)
+    list(APPEND SHARED_LIBRARIES "CoMISo" ${accelerate_library})
+  else(APPLE) #APPLE
+    list(APPEND SHARED_LIBRARIES "CoMISo")
+  endif(APPLE)
+
+ENDIF(LIBCOMISO_FOUND)
 
 add_library(igl SHARED
   python.cpp
