fixes for linux

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -89,6 +89,9 @@ IF(LIBCOMISO_FOUND)
   if(APPLE)
     find_library(accelerate_library Accelerate)
     list(APPEND SHARED_LIBRARIES "CoMISo" ${accelerate_library})
+  elseif(UNIX)
+    find_package(BLAS REQUIRED)
+    list(APPEND SHARED_LIBRARIES "CoMISo" ${BLAS_LIBRARIES})
   endif(APPLE)
 
   if(MSVC)
