--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -135,10 +135,8 @@ endif(UNIX AND NOT APPLE)
 #message(FATAL_ERROR ${SHARED_LIBRARIES})
 
 # Store location of tutorial/shared directory 
-set(TUTORIAL_SHARED_PATH ${CMAKE_CURRENT_SOURCE_DIR}/shared)
-message("tutorial_shared_path = ${TUTORIAL_SHARED_PATH}")
-configure_file(tutorial_shared_path.h.in "${CMAKE_BINARY_DIR}/tutorial_shared_path.h")
-include_directories(${CMAKE_BINARY_DIR})
+set(TUTORIAL_SHARED_PATH ${CMAKE_CURRENT_SOURCE_DIR}/shared CACHE PATH "location of shared tutorial resources")
+add_definitions("-DTUTORIAL_SHARED_PATH=${TUTORIAL_SHARED_PATH}")
 
 # Chapter 1
 add_subdirectory("101_FileIO")
