--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ sudo: false
 matrix:
   include:
     - os: linux
-      compiler: gcc-4.8.1
+      # compiler: gcc-4.8.1
       script:
         - git submodule update --init --recursive
         - cd tutorial
         - mkdir build
         - cd build
         # - CXXFLAGS="-mno-rtm" cmake -DCMAKE_CXX_COMPILER=g++-4.8 ../
-        - cmake -DCMAKE_CXX_COMPILER=g++-4.8 ../
+        - cmake ../
         - make -j 2
       addons:
         apt:
@@ -18,19 +18,19 @@ matrix:
           #   - ubuntu-toolchain-r-test
           #   - kalakris-cmake
           packages:
-            - g++-4.8
-            - libglu1-mesa-dev
-            - libxxf86vm-dev
+            # - g++-4.8
+            # - libglu1-mesa-dev
+            # - libxxf86vm-dev
             - cmake
-            - binutils
-            - libx11-dev
-            - mesa-common-dev
+            # - binutils
+            # - libx11-dev
+            # - mesa-common-dev
             - libgl1-mesa-dev
-            - libglu1-mesa-dev
-            - libxrandr-dev
-            - libxi-dev
-            - libxmu-dev
-            - libblas-dev
+            # - libglu1-mesa-dev
+            # - libxrandr-dev
+            # - libxi-dev
+            # - libxmu-dev
+            # - libblas-dev
             - xorg-dev
     # - os: osx
     #   compiler: clang
