--- a/.travis.yml
+++ b/.travis.yml
@@ -2,42 +2,41 @@ language: cpp
 sudo: false
 matrix:
   include:
-    - os: linux
-      # compiler: gcc-4.8.1
-      script:
-        - git submodule update --init --recursive
-        - cd tutorial
-        - mkdir build
-        - cd build
-        # - CXXFLAGS="-mno-rtm" cmake -DCMAKE_CXX_COMPILER=g++-4.8 ../
-        - cmake ../
-        - make -j 2
-      addons:
-        apt:
-          # sources:
-          #   - ubuntu-toolchain-r-test
-          #   - kalakris-cmake
-          packages:
-            # - g++-4.8
-            # - libglu1-mesa-dev
-            # - libxxf86vm-dev
-            - cmake
-            # - binutils
-            # - libx11-dev
-            # - mesa-common-dev
-            - libgl1-mesa-dev
-            # - libglu1-mesa-dev
-            # - libxrandr-dev
-            # - libxi-dev
-            # - libxmu-dev
-            # - libblas-dev
-            - xorg-dev
-    # - os: osx
-    #   compiler: clang
+    # - os: linux
+    #   compiler: gcc-4.8.1
     #   script:
     #     - git submodule update --init --recursive
     #     - cd tutorial
     #     - mkdir build
     #     - cd build
-    #     - cmake ../
+    #     - CXXFLAGS="-mno-rtm" cmake -DCMAKE_CXX_COMPILER=g++-4.8 ../
     #     - make -j 2
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - ubuntu-toolchain-r-test
+    #         - kalakris-cmake
+    #       packages:
+    #         - g++-4.8
+    #         - libglu1-mesa-dev
+    #         - libxxf86vm-dev
+    #         - cmake
+    #         - binutils
+    #         - libx11-dev
+    #         - mesa-common-dev
+    #         - libgl1-mesa-dev
+    #         - libglu1-mesa-dev
+    #         - libxrandr-dev
+    #         - libxi-dev
+    #         - libxmu-dev
+    #         - libblas-dev
+    #         - xorg-dev
+    - os: osx
+      compiler: clang
+      script:
+        - git submodule update --init --recursive
+        - cd tutorial
+        - mkdir build
+        - cd build
+        - cmake -DLIBIGL_USE_STATIC_LIBRARY=ON ../
+        - make -j 2
