travis build test 8 - updating cmake
Former-commit-id: f937ecc786e6b18038e852d9268c43ad5942404d

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,8 @@ matrix:
     - os: osx
       compiler: clang
       script:
+        - brew update
+        - brew upgrade cmake
         - git submodule update --init --recursive
         - cd tutorial
         - mkdir build
