cgal 4.4 is too old, now it gets updated on travis
Former-commit-id: c33a0984c249be3e42d3aa2678b24db5c8e6721c

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ matrix:
       script:
         - brew update
         - brew upgrade cmake
-        - brew install cgal
+        - brew upgrade cgal
         - git submodule update --init --recursive
         - cd tutorial
         - mkdir build
