--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ matrix:
         - cd tutorial
         - mkdir build
         - cd build
-        - cmake -DCMAKE_CXX_COMPILER=g++-4.8 ../
+        - cmake -DLIBIGL_USE_STATIC_LIBRARY=ON -DCMAKE_CXX_COMPILER=g++-4.8 ../
         - make -j 2
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
             - kalakris-cmake
-          packages: 
+          packages:
             - xorg-dev
             - libglu1-mesa-dev
             - g++-4.8
