wrong compiler in linux build

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
         - cd python
         - mkdir build
         - cd build
-        - cmake ../
+        - cmake -DCMAKE_CXX_COMPILER=g++-4.8 ../
         - make -j 2
         - cd ../../
         - cd tutorial
